@@ -1,6 +1,11 @@
 2010-01-09  Matevz Tadel  <matevz.tadel@ijs.si>
 
 	* Stones/SVars.h:
+	Add member mStdDesireDelta to SDesireVar.
+
+2010-01-09  Matevz Tadel  <matevz.tadel@ijs.si>
+
+	* Stones/SVars.h:
 	SInertVar now takes two delta limits - one for increasing and
 	another for decreasing of absolute value of the variable.
 
